http/main/default/objects/Address_Change_Event__e/Address_Change_Event__e.object-meta.xml
<CustomObject>
    <description>Simple platform event to capture an Address for the purposes of test project</description>
    <label>Address Change Event</label>
    <pluralLabel>Address Change Events</pluralLabel>
</CustomObject>