http/main/default/objects/Address_Change_Event__e/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>County</description>
    <label>County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>