http/main/default/objects/Address_Change_Event__e/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <description>UK post code</description>
    <label>PostCode</label>
    <length>8</length>
    <type>Text</type>
</CustomField>