http/main/default/objects/Address_Change_Event__e/fields/TownOrCity__c.field-meta.xml
<CustomField>
    <fullName>TownOrCity__c</fullName>
    <description>Town or City</description>
    <label>TownOrCity</label>
    <length>50</length>
    <type>Text</type>
</CustomField>